--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">EVote</string>
+    <string name="greet_text">Hello %1$s!\nPlease fill out the form to set started</string>
+    <string name="voter">Voter</string>
+    <string name="commissioner">Commissioner</string>
+    <string name="aadhaar_number">Aadhaar number</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="forgotten_password">Forgotten Password?</string>
 </resources>
