--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="forgotten_password">Forgotten Password?</string>
+    <string name="my_details">My details</string>
+    <string name="vote">Vote</string>
 </resources>
