Set up the login to open commissioner menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="forgotten_password">Forgotten Password?</string>
     <string name="my_details">My details</string>
     <string name="vote">Vote</string>
+    <string name="voter_list">Voter list</string>
+    <string name="vote_count">Vote count</string>
 </resources>
